Feedback on invalid password, several icon fixes, start on dark mode

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -55,9 +55,9 @@
     --color-evergray-800:#0B0B0A;
 }
 
-.material-symbols-outlined {
+.sidebar .material-symbols-outlined, .symbol.material-symbols-outlined {
     font-family: 'Material Symbols Outlined';
     padding: 0 2px;
     vertical-align: middle;
-    transform: translate(-2%, -7%) scale(90%);
+    transform: translate(-2%, -5%) scale(95%);
 }
